# AbyssDash

./: CMakeLists.txt  README.md  install.sh
include/: AbyssDashLog.h
include/app/: Window.h
src/: main.cpp
src/app/: Window.cpp
